base/k8s/minio/sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    operator.min.io/authors: MinIO, Inc.
    operator.min.io/license: AGPLv3
    operator.min.io/support: https://subnet.min.io
  labels:
    name: minio-operator
  name: sts
  namespace: minio-operator
spec:
  ports:
  - name: https
    port: 4223
    targetPort: 4223
  selector:
    name: minio-operator
  type: ClusterIP
